Damo.Io.Server/www/styles/app.css
:root {
    --bg-color: #333;
    --fg-color: #ddd;
    --card-color: rgba(0, 0, 0, 0.2);
    --primary-color: #c055c0;
    --secondary-color: #1180b0;

    --text-color: var(--fg-color);
    --title-color: color-mix(in srgb, var(--secondary-color), var(--fg-color) 20%);

    --code-bg-color: rgba(255, 255, 255, 0.05);
    --link-color: var(--primary-color);

    --article-date-text-color: rgba(255, 255, 255, 0.25);

    --menu-item-bg-not-selected: color-mix(in srgb, var(--primary-color), transparent 95%);
    --menu-item-bg-selected: color-mix(in srgb, var(--primary-color), transparent 70%);
    --menu-item-bg-hover: color-mix(in srgb, var(--primary-color), transparent 80%);

    --serif: 'Cambria', 'Palatino', serif;
    --sans-serif: -apple-system, 'Calibri', 'Helvetica Neue', sans-serif;
    --monospace: 'JetBrains Mono', 'SFMono-Regular', 'Consolas', 'Liberation Mono', 'Menlo', monospace;
    
    --spacing: 1.2rem;
    --spacing-2: calc(var(--spacing) * 2);
    --spacing-4: calc(var(--spacing) * 4);

    --card-shadow: 2px 2px 1px rgba(0, 0, 0, 0.3);
    --emphasis-shadow: 1px 1px 0 rgba(0, 0, 0, 0.8);
}

@media (prefers-color-scheme: light) {
    :root {
        --bg-color: #ddd;
        --fg-color: #444;
        --card-color: rgba(255, 255, 255, 0.7);

        --menu-item-bg-not-selected: color-mix(in srgb, var(--primary-color), transparent 90%);
        --menu-item-bg-selected: color-mix(in srgb, var(--primary-color), transparent 70%);
        --menu-item-bg-hover: color-mix(in srgb, var(--primary-color), transparent 60%);

        --article-date-text-color: rgba(0, 0, 0, 0.5);
    }
}

@media (max-width: 1000px) {
    :root {
        --spacing: 1rem;
    }
}

html {
    font-size: 62.5%;
    background-color: var(--bg-color);
}

body {
    margin: 0;
    font-size: 1.8rem;
    font-family: var(--serif);
    font-weight: 300;
    color: var(--text-color);
    word-break: break-word;
}

* {
    box-sizing: border-box;
}

#template > main {
    max-width: 80rem;
    margin-left: 40rem;
    padding: var(--spacing-2);
    min-height: 100vh;
}

#template > aside {
    background-color: var(--card-color);
    position: fixed;
    left: 0;
    top: 0;
    bottom: 0;
    width: 40rem;
    padding: var(--spacing-2) var(--spacing-4);
    text-align: center;
    box-shadow: var(--card-shadow);
}

#template > aside h1 {
    font-family: var(--serif);
    color: var(--text-color);
    font-weight: 600;
    letter-spacing: -2px;
    margin: var(--spacing-2) 0;
    background: url("/favicon.svg") no-repeat left center;
    background-size: 5rem 5rem;
    padding-left: 6rem;
    display: inline-block;
}

h1, h2, h3, h4 {
    line-height: 1.1;
    color: var(--title-color);
    font-family: var(--sans-serif);
    font-weight: 600;
    letter-spacing: -1px;
    margin: 0 0 var(--spacing-2);
    filter: drop-shadow(var(--emphasis-shadow));
}

h1 {
    font-size: 4.8rem;
}

h2 {
    font-size: 3.6rem;
}

h3 {
    font-size: 2.4rem;
}

h4 {
    padding-top: var(--spacing);
    font-size: 2rem;
}

ul {
    list-style-type: disc;
}

ol {
    list-style-type: lower-alpha;
}

ul, ol {
    margin-bottom: var(--spacing);
    
    li {
        margin-left: 3.2rem;
        margin-bottom: .4rem;
    }
}

pre {
    overflow-x: auto;
    background-color: var(--code-bg-color);
    padding: var(--spacing-2);
    margin-bottom: var(--spacing-2);
    border-radius: .5rem;

    font-family: var(--monospace);
    font-size: 1.4rem;
    line-height: 1.3;
}

pre + h4 {
    padding-top: var(--spacing-2);
}

pre + p {
    padding-top: var(--spacing-2);
}

a:link, a:hover, a:visited, a:active {
    text-decoration: none;
    color: var(--link-color);
}

a:active {
    position: relative;
    top: 1px;
}

p {
    margin: 0 0 var(--spacing-2);
}

em, strong {
    font-weight: 600;
}
    
figure {
    margin: 0;

    img {
        border-radius: .5rem;
    }

    figcaption {
        font-size: 1.4rem;
        text-align: center;
        font-style: italic;
    }
}

article {
    background-color: var(--card-color);
    padding: var(--spacing-4);
    margin: 0 0 var(--spacing-2) 0;
    border-radius: 1rem;
    box-shadow: var(--card-shadow);
    
    header {
        overflow: hidden;
        margin-bottom: var(--spacing-4);
        
        h1 {
            a:link, a:visited {
                color: var(--title-color);
            }
        }
        
        h2 {
            margin: 0;
            font-size: 1.7rem;
            font-weight: normal;
            letter-spacing: -0.1px;
            color: var(--article-date-text-color);
        }
    }
    
    
    img {
        max-width: 100%;
    }
    
    section {
        line-height: 180%;
    }
    
    nav {
        display: flex;
        justify-content: end;
    }
}

article:last-child {
    margin-bottom: 0;
}

article.Social {
    background-image: url('data:image/svg+xml;utf8,%3Csvg%20height%3D%222500%22%20width%3D%222331%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%22-0.41%200.22%20747.62%20801.4499999999999%22%3E%3Cpath%20d%3D%22M729.94%20479.5c-10.96%2056.4-98.17%20118.12-198.34%20130.08-52.23%206.23-103.66%2011.96-158.49%209.44-89.68-4.1-160.45-21.4-160.45-21.4%200%208.73.54%2017.04%201.62%2024.81%2011.66%2088.52%2087.76%2093.82%20159.84%2096.29%2072.76%202.49%20137.55-17.94%20137.55-17.94l2.99%2065.79s-50.89%2027.32-141.55%2032.35c-50%202.75-112.07-1.26-184.37-20.39C31.94%20737.02%204.97%20569.86.85%20400.26-.41%20349.9.37%20302.42.37%20262.7.37%2089.27%20113.99%2038.44%20113.99%2038.44%20171.28%2012.12%20269.59%201.06%20371.79.22h2.52c102.19.84%20200.57%2011.9%20257.86%2038.22%200%200%20113.62%2050.83%20113.62%20224.26%200%200%201.42%20127.96-15.85%20216.8%22%20fill%3D%22%23888%22%2F%3E%3Cpath%20d%3D%22M611.77%20276.16v209.99h-83.2V282.33c0-42.97-18.07-64.77-54.23-64.77-39.98%200-60.01%2025.86-60.01%2077.02v111.57h-82.71V294.58c0-51.16-20.04-77.02-60.01-77.02-36.16%200-54.24%2021.8-54.24%2064.77v203.82h-83.19V276.16c0-42.92%2010.93-77.03%2032.88-102.26%2022.63-25.23%2052.27-38.17%2089.07-38.17%2042.57%200%2074.81%2016.37%2096.12%2049.1l20.72%2034.74%2020.73-34.74c21.31-32.73%2053.55-49.1%2096.12-49.1%2036.79%200%2066.44%2012.94%2089.07%2038.17%2021.95%2025.23%2032.88%2059.34%2032.88%20102.26z%22%20fill%3D%22%23fff%22%2F%3E%3C%2Fsvg%3E');
    background-repeat: no-repeat;
    background-position-x: right var(--spacing-4);
    background-position-y: var(--spacing-2);
    background-size: var(--spacing-4) var(--spacing-4);
    
    header {
        height: var(--spacing-4);
        
        h2 {
            line-height: var(--spacing-4);
        }
    }

    section {
        line-height: 130%;
        font-size: 2.4rem;
        text-align: center;
        margin-bottom: 1.6rem;
    }
}

.main-menu {
    list-style-type: none;

    li {
        margin: 0;
    }
    
    a {
        display: block;
        padding: var(--spacing) var(--spacing-2);
        margin: 0 0 var(--spacing);
        border-radius: 3rem;
        background-color: var(--menu-item-bg-not-selected);
        box-shadow: var(--card-shadow);
    }
    
    a:active {
        position: relative;
        top: 2px;
    }
    
    a.selected {
        background-color: var(--menu-item-bg-selected);
        box-shadow: var(--card-shadow);
        color: var(--text-color);
    }
    
    a:hover {
        background-color: var(--menu-item-bg-hover);
    }
}

@media (max-width: 1000px) {

    #template > main {
        margin: 0;
        max-width: none;
    }

    #template > aside {
        width: auto;
        position: static;
        padding: 0;
    }
    
    .main-menu {
        display: flex;
        gap: calc(var(--spacing) / 2);
        justify-content: center;
        margin: 0;
        
        a {
            width: auto;
        }
    }
    
    article header {
        display: block;
        
        h1 {
            margin-bottom: var(--spacing);
        }
    }
}

